# config_storage

./: .gitignore  .gitmodules  GIT.org  README.md  README.org  compress.sh  do_copy.sh  get_repo.nu  main.org
BitNet/: bitnet.sh  infer.py  infer.sh  main.org  setup.sh
FFMPEG_VIDEO_FFT/: README.org  compile.sh  flake.nix  main.c
GIT/: pull.sh
NVIDIA_INSTALLS/: README.org  install_apt_dependencies.sh  install_docker.sh  install_k3s.sh  install_nvidia_ctk.sh  install_nvidia_drivers.sh  work.sh
ROCM_Torch/: README.org  install.sh  main.py
RUST/: all_install.sh  compile.org  compile.sh  generic-1.sh  reset_all.sh  setup_fd.sh
SSH/: README.org  setup.sh
TEMPLATE/: README.org  main.py
alacritty_config/: README.org  alacritty.toml  do_copy.sh
application_shortcut_scripts/: M_A_0  M_A_1  M_A_2  M_A_3  M_A_4  M_A_5  M_A_6  M_A_7  M_A_8  M_A_9  M_A_E  M_A_GRAVE  M_A_I  M_A_O  M_A_P  M_A_Q  M_A_R  M_A_S  M_A_T  M_A_U  M_A_W  M_A_Y  M_C_1  M_C_2  M_C_A  M_C_D  M_C_E  M_C_F  M_C_G  M_C_Q  M_C_R  M_C_S  M_C_T  M_C_W  M_ESC  M_F1  M_F2  M_F3  README.org  copy.sh  (+1 more)
cargo/: README.org  config.toml  copy.sh
debian_home/: HOME,.config,fish,config.fish  HOME,.config,foot,foot.ini  HOME,.config,nushell,config.nu  HOME,.config,wayfire.ini  HOME,.shrc  HOME,.zshrc  HOME,important_functions.sh  main.org  setup.sh
debootstrap/: README.org  debian.list  debian_stable.list  debian_stable_backports.list  debian_testing.list  fstab  functions.sh  install.sh  installed  xanmod.list
dnsmasq/: README.org  dnsmasq.conf  dnsmasq.sh  resolv
docker_template_pytorch/: #README.org#  Dockerfile  README.org  default_config.yaml  docker.download_sam_checkpoints.sh  docker.infer_flux.py  docker.infer_flux.sh  docker.infer_molmo.py  docker.infer_molmo.sh  docker.infer_qwen.py  docker.infer_qwen.sh  docker.start_jupyter_lab.sh  host.docker_build.sh  host.docker_run_interactive.sh  host.docker_run_interactive.txt  host.image_names.sh  important_functions.sh
dockerfiles/: .gitignore  README.org  build_container.sh  build_cpu.sh  build_cuda.sh  build_cuda_official.sh  build_rocm.sh  build_rocm_pytorch.sh  common_functions.sh  run_cpu.sh  run_cuda.sh  run_rocm.sh
download_youtube/: main.org
emacs.d/: copy.sh  early-init.el  init.el  init.org  myelisp
emacs_new/: README.org  bindings.el  functions.el  get_packages.sh  hooks.el  main.el  modes.el  paths.el  requires.el  setup.sh  variables.el  variables_post.el
fish_config/: README.org  SUDO_ASKPASS  config.fish  copy.sh
flatpak_emacs/: README.org  enter.sh  flat_emacs.sh  install.sh
foot/: do_copy.sh  foot.org
garage/: .gitignore  README.org  garage_headers.toml  garage_s3.toml  garage_template.toml  gen_config.sh  gen_secret.sh  key_create.sh  layout_assign.sh  node_id.sh  secret.txt  server.sh
grub/: install.sh
helix/: README.org  config.toml  copy.sh
home_config/: Cargo.toml  host.image_names.sh  main.org
home_config/src/: alacritty.toml  bashrc  config.ghostty  fish_config.fish  foot.ini  helix_config.toml  keybind.rs  main.rs  mysync.rs  shrc  wezterm.lua  zshrc
important_common_utils/: README.org  __init__.py
kde_shortcuts/: README.org  all.conf  copy.sh  export.kksrc  kglobalshortcutsrc  relevant.conf  work.py
kernel_commandline/: README.org  cmdline.sh
nixos/: README.org  configuration.nix  do_copy.sh  hardware-configuration.nix
opencode/: README.org  docker_run.sh  podman_run.sh
postgres/: README.org  connect_to_db.sh  docker_run_postgres.sh  env.sh
rust_builder/: Dockerfile  README.org  host.docker_run_interactive.sh  host.image_names.sh  install.sh
rust_s3/: Cargo.toml
scripts/: alacritty_daemon.sh  alacritty_master.sh  launcher  launcher.sh  tmux_auto.sh
semaphor_example/: README.org  create.cc  post.cc  wait.cc
shell_functions/: .bashrc  important_functions.org  important_functions.py  important_functions.sh  zshrc
sleeper/: get_root.nu  sleeper.c
starship/: copy.sh  starship.toml
template_python_cv_code/: README.org  main.py  original.org
video_fft/: .gitignore  CMakeLists.txt  Cargo.toml  README.org  all_build.sh  all_install.sh  build.rs  cargo_build.sh  cargo_run.sh  cargo_watch.sh  cmake_build.sh  compile_commands.json  compile_proto.sh  convert_video_2_raw.sh  env.sh  flake.nix  generate_rs_bindings.sh  infer.proto  infer_client.py  infer_pb2.py  infer_pb2_grpc.py  init.sh  model  run_cpu.sh  run_cuda.sh  run_rocm.sh  run_server.sh  validate.py
video_fft/src/: client.rs  export.cpp  export.hpp  export.rs  filestore.rs  hasher.rs  inferencerelated.rs  inferencerelatedimage.rs  inferencerelatedimagecvusability.rs  keyvaluedb.rs  lockssync.rs  main.cpp  main.hpp  main.rs  mlockffmpeg.hh  mlockffmpeg.rs  mlockffmpeg.txt  server.rs  serverinferencechannel.rs  serverinferencechannelboth.rs  serverinferencechannelimage.rs  serverinferencechannelimagecvusability.rs  torchimpl.rs  version.rs  videofft.rs  videofftstats.rs  videofn.rs  videoview.rs
wayfire_config/: README.org  config.jsonc  do_copy.sh  wayfire.ini
wezterm/: README.org  copy.sh  wezterm.lua
wireguard_scripts/: README.org  config.sh  connect.sh  generate_key.sh  interface.sh
wrapper_code/: default.nix  mysync.c  mysync.el  mysync.org  (+5 more)
(+297 files in other folders)
