[package]
name = "home_config"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }

[[bin]]
name = "home_config"
path = "src/main.rs"

[[bin]]
name = "mysync"
path = "src/mysync.rs"

[[bin]]
name = "keybind"
path = "src/keybind.rs"
