[package]
name = "video_fft"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "video_fft"
path = "src/main.rs"

[[bin]]
name = "infer-server"
path = "src/server.rs"

[[bin]]
name = "infer-client"
path = "src/client.rs"

[build-dependencies]
tonic-prost-build = "0.14.2"

[dependencies]

tonic = { version = "0.14", features = ["zstd"] }
tonic-prost = "0.14"
tonic-reflection = "0.14"
prost = "0.14"

oneshot = { version = "0.2", features = ["async", "std"] }
flume = "0.12"

blake3 = { version = "1", features = ["mmap", "rayon", "serde"] }
gxhash = "3"

tokio = { version = "1", features = ["full"] }
futures = "0.3"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1", features = ["async-await"] }

rayon = "1"
jwalk = "0.8"

memmap2 = "0.9"
redb = "4.1.0"

anyhow = "1"
c32 = { version = "0.6", features = ["alloc"] }
chrono = "0.4.45"
mimalloc = "0.1"
serde = { version = "1", features = ["derive"] }

tch = { version = "0.24.0", features = ["serde_json", "regex", "memmap2", "image"] }
